--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
         <div class="main-content">
             <div class="announcement">Announcement: Stable Release!</div>
             <br>
+            <div class="index-area">
+                <h2>Live Plays</h2>
+                <hr/>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>玩家</td>
+                            <td>歌曲</td>
+                            <td>连击</td>
+                            <td>分数</td>
+                            <td>准确率</td>
+                            <td>MODS</td>
+                            <td>时间</td>
+                        </tr>
+                    </thead>
+                    <tbody id="activity-list">
+                        <!-- will be filled in script -->
+                    </tbody>
+                </table>
+            </div>
             <!-- filled in with live plays html-->
             <div class="index-area">
                 <h2>Random beatmaps</h2>
