--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="announcement">Announcement: Stable Release!</div>
             <br>
             <div class="index-area">
-                <h2>Live Plays</h2>
+                <h2>Liv Plays</h2>
                 <hr/>
                 <table>
                     <thead>
@@ -82,7 +82,6 @@
                     </tbody>
                 </table>
             </div>
-            <!-- filled in with live plays html-->
             <div class="index-area">
                 <h2>Random beatmaps</h2>
                 <a onclick="genRandomList()" class="more" style="cursor:pointer;">Randomize</a>
