--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="announcement">Announcement: <a href="https://owu.vercel.app/changes.html">Changelog</a> page is here!</div>
             <br>
             <div class="index-area">
-                <h2>Liv Plays</h2>
+                <h2>Live Plays</h2>
                 <hr/>
                 <table>
                     <thead>
